cabal-version: 2.1

name:           twt
version:        0.1.0.0
license-file:   LICENSE
author:         Encode Panda
maintainer:     Encode Panda
copyright:      Encode Panda
category:       Unclassified
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/EncodePanda/twt

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , text
  default-language: Haskell2010

executable twt-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , twt
  default-language: Haskell2010

test-suite twt-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Twt.ExampleSpec
  -- dependencies in library
  build-depends:
    , base
    , hspec
    , hedgehog
    , hspec-hedgehog
    , twt
  build-tool-depends: hspec-discover:hspec-discover == 2.*